5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4187/executions/1594_1801.log
== TEST (2019-04-04 13:49:40) 
-- CODE:
N= input("nome do objeto")
f= "abra" + N
-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 13:53:39) 
-- CODE:
N= input("nome do objeto")

# "f" = feitiço
f= "abra" + N

x= float(input("numero de repetiçao de feitiço"))
RF= f*x
print(RF)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    RF= f*x
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 13:53:51) 
-- CODE:
N= input("nome do objeto:")

# "f" = feitiço
f= "abra" + N

x= float(input("numero de repetiçao de feitiço:"))
RF= f*x
print(RF)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    RF= f*x
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 13:54:45) 
-- CODE:
N= input("nome do objeto:")

# "f" = feitiço
f= "abra" + N

x= float(input("numero de repetiçao de feitiço:"))
RF= f*x
print(RF)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    RF= f*x
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 13:56:31) 
-- CODE:
N= input("nome do objeto:")

# "f" = feitiço
f= ("abra" + N) 

x= float(input("numero de repetiçao de feitiço:"))
RF= f*x
print(RF)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    RF= f*x
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 13:57:45) 
-- CODE:
N= input("nome do objeto:")

x= float(input("numero de repetiçao de feitiço:"))

# "f" = feitiço
f= ("abra" + N) 

RF= f*x
print(RF)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    RF= f*x
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 12:39:28) 
-- CODE:
N= input("nome do objeto:")

x= float(input("numero de repetiçao de feitiço:"))

# "f" = feitiço
f= ("abra" + N) 

RF= f*x
print(RF)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    RF= f*x
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 12:43:10) 
-- CODE:
N= input("nome do objeto:")

x= int(input("numero de repetiçao de feitiço:"))

# "f" = feitiço
f= ("abra" + N) 

RF= f*x
print(RF)
-- OUTPUT:
abralivroabralivroabralivroabralivroabralivroabralivroabralivroabralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 12:45:03) 
-- CODE:
N= input("nome do objeto:")


# "f" = feitiço
f= ("abra" + N) 

x= int(input("numero de repetiçao de feitiço:"))

RF= f*x
print(RF)
-- OUTPUT:
abralivroabralivroabralivroabralivroabralivroabralivroabralivroabralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 12:46:04) 
-- CODE:
o= input("nome do objeto:")


# "f" = feitiço
f= ("abra" + o) 

n= int(input("numero de repetiçao de feitiço:"))

RF= f*x
print(RF)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    RF= f*x
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 12:47:01) 
-- CODE:
o= input("nome do objeto:")

n= (input("numero de repetiçao de feitiço:"))

# "f" = feitiço
f= ("abra" + o) 

RF= f*x
print(RF)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    RF= f*x
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 12:47:28) 
-- CODE:
o= input("nome do objeto:")

n= input("numero de repetiçao de feitiço:")

# "f" = feitiço
f= ("abra" + o) 

RF= f*x
print(RF)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    RF= f*x
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 12:48:38) 
-- CODE:
o= input("nome do objeto:")

n= float(input("repetiçoes:"))

# "f" = feitiço
f= ("abra" + o) 

RF= f*x
print(RF)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    RF= f*x
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 12:48:52) 
-- CODE:
o= input("nome do objeto:")
n= float(input("repetiçoes:"))

# "f" = feitiço
f= ("abra" + o) 

RF= f*x
print(RF)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    RF= f*x
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-18 10:59:03) 
-- CODE:
o= input("nome do objeto:")
n= float(input("repetiçoes:"))

# "f" = feitiço
f= ("abra" + o) 

RF= f*x
print(RF)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    RF= f*x
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 13:12:36) 
-- CODE:
o= input("nome do objeto:")
n= float(input("repetiçoes:"))

# "f" = feitiço
f= ("abra" + o) 

RF= f*x
print(RF)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    RF= f*x
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 13:12:53) 
-- CODE:
o= input("nome do objeto:")
n= float(input("repetiçoes:"))

# "f" = feitiço
f= ("abra" + o) 

RF= f*x
print(RF)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    RF= f*x
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 13:13:57) 
-- CODE:
o= input("nome do objeto:")
n= int(input("repetiçoes:"))

# "f" = feitiço
f= ("abra" + " " + o) 

RF= f*N
print(RF)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    RF= f*N
NameError: name 'N' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 13:15:11) 
-- CODE:
o= input("nome do objeto:")
n= int(input("repetiçoes:"))

# "f" = feitiço
f= "abra" + o

RF= f*n
print(RF)
-- OUTPUT:
abralivroabralivroabralivroabralivroabralivroabralivroabralivroabralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 13:15:26) 
-- CODE:
o= input("nome do objeto:")
n= int(input("repeticoes:"))

# "f" = feitiço
f= "abra" + o

RF= f*n
print(RF)
-- OUTPUT:
abralivroabralivroabralivroabralivroabralivroabralivroabralivroabralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 13:15:48) 
-- CODE:
o= input("nome do objeto:")
n= int(input("repeticoes:"))

# "f" = feitiço
f= "abra" +  " " + o

RF= f*n
print(RF)
-- OUTPUT:
abra livroabra livroabra livroabra livroabra livroabra livroabra livroabra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 13:15:54) 
-- CODE:
o= input("nome do objeto:")
n= int(input("repeticoes:"))

# "f" = feitiço
f= "abra" +  " " + o

RF= f*n
print(RF)
-- OUTPUT:
abra livroabra livroabra livroabra livroabra livroabra livroabra livroabra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 13:16:55) 
-- CODE:
o= input("nome do objeto:")
n= int(input("repeticoes:"))

# "f" = feitiço
f= "abra " + o

RF= f*n
print(RF)
-- OUTPUT:
abra livroabra livroabra livroabra livroabra livroabra livroabra livroabra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 13:17:02) 
-- CODE:
o= input("nome do objeto:")
n= int(input("repeticoes:"))

# "f" = feitiço
f= "abra " + o

RF= f*n
print(RF)
-- OUTPUT:
abra livroabra livroabra livroabra livroabra livroabra livroabra livroabra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 13:17:39) 
-- CODE:
o= input("nome do objeto:")
n= int(input("repeticoes:"))

# "f" = feitiço
f= "abra " + o + " "

RF= f*n
print(RF)
-- OUTPUT:
abra livro abra livro abra livro abra livro abra livro abra livro abra livro abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 13:17:56) 
-- CODE:
o= input("nome do objeto:")
n= int(input("repeticoes:"))

# "f" = feitiço
f= "abra " + o + " "

RF= f*n
print(RF)
-- EXECUTION TIME:
0.864819
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abra livro abra livro abra livro abra livro abra livro abra livro abra livro abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abra carro abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 13:18:04) 
-- CODE:
o= input("nome do objeto:")
n= int(input("repeticoes:"))

# "f" = feitiço
f= "Abra " + o + " "

RF= f*n
print(RF)
-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 13:18:18) 
-- CODE:
o= input("nome do objeto:")
n= int(input("repeticoes:"))

# "f" = feitiço
f= "Abra " + o + " "

RF= f*n
print(RF)
-- EXECUTION TIME:
0.762753
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
